--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
+    "decimal.js": "^10.4.3",
+    "npm": "^10.8.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
